--- a/package.json
+++ b/package.json
@@ -6,5 +6,7 @@
   "devDependencies": {
     "electron": "^22.2.0"
   },
-  "scripts":{"start":"electron ./index.js"}
+  "scripts": {
+    "start": "electron ./index.js"
+  }
 }
