--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "sass-loader": "^12.0.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.14"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
